p3/confs/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhayoun-playground
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
    - host: playground.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nhayoun-playground
                port:
                  number: 8885
